test/files/neg/plugin-after-terminal/lib/plugins.jar.desired.sha1
aaa554ce4b5988ad53f25f03a79d31c41aef4880 ?plugins.jar
